Family page: reduce grid size on mobile (fixes #12663) (#12780)
* Family page: let grid backgrounds scroll on mobile (fixes #12663)

* Update mobile mental health grid

--- a/media/css/firefox/family/components/_hero.scss
+++ b/media/css/firefox/family/components/_hero.scss
@@ -14,7 +14,7 @@ $image-path: '/media/protocol/img';
 .c-hero {
     background: f3.$violet-dark center top / cover no-repeat url('/media/img/firefox/family/grid-hero.svg');
 
-    @media (prefers-reduced-motion: no-preference) {
+    @media (prefers-reduced-motion: no-preference) and (#{$mq-sm}) {
         background-attachment: fixed;
     }
 
