--- a/media/css/firefox/family/components/modules/_private-mode.scss
+++ b/media/css/firefox/family/components/modules/_private-mode.scss
@@ -8,7 +8,7 @@
 .c-private-mode {
     background: f3.$pink-light center / cover no-repeat url('/media/img/firefox/family/grid-cylinder.svg');
 
-    @media (prefers-reduced-motion: no-preference) {
+    @media (prefers-reduced-motion: no-preference) and (#{$mq-sm}) {
         background-attachment: fixed;
     }
 
